# WeatherApp

./: Docker.prod  Dockerfile.dev  Dockerfile.prod  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
docker/nginx/: nginx.conf
src/apps/user/: admin.py  forms.py  models.py  urls.py  views.py
src/apps/user/migrations/: 0001_initial.py  0002_alter_customuser_login_alter_customuser_password.py
src/apps/user/templates/: login.html  register.html
src/apps/weather/: dto.py  forms.py  models.py  urls.py  views.py
src/apps/weather/migrations/: 0001_initial.py  0002_rename_latitude_location_latitude_and_more.py  0003_location_unique_user_coordinate.py
src/apps/weather/services/: location_service.py  weather_api_service.py
src/apps/weather/templates/: city_search_results.html  home.html
src/apps/weather/tests/: test_weather_api_service.py
src/config/: settings.py  urls.py
src/templates/: 400.html  404.html  base.html
src/templates/includes/: nav.html
