[tool.poetry]
name = "weatherapp"
version = "0.1.0"
description = ""
authors = ["Dima <strogansev.dima@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.3"
psycopg2-binary = "^2.9.10"
python-decouple = "^3.8"
requests = "^2.32.3"
gunicorn = "^23.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
